--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "0.21",
         "core-js": "^3.6.5",
         "less": "^4.1.2",
         "less-loader": "5",
+        "lodash": "^4.17.21",
+        "nprogress": "^0.2.0",
         "router": "^1.3.6",
         "vue": "^2.6.11",
         "vue-router": "^3.5.3",
