--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     },
     "dependencies": {
         "axios": "0.21",
+        "babel-plugin-component": "^1.1.1",
+        "babel-preset-es2015": "^6.9.0",
         "core-js": "^3.6.5",
+        "element-ui": "^2.15.6",
         "less": "^4.1.2",
         "less-loader": "5",
         "lodash": "^4.17.21",
+        "mockjs": "0.1.10",
         "nprogress": "^0.2.0",
         "router": "^1.3.6",
+        "swiper": "5",
         "vue": "^2.6.11",
         "vue-router": "^3.5.3",
         "vuex": "^3.6.2"
